fixed z-index on tab

--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,7 @@ position: fixed;
 z-index: 1;
 top: 0;
 left: 0;
-overflow: hidden;
+/* overflow: hidden; */
 transition: all 0.4s ease-in-out;
 padding-top: 0px;
   }
@@ -187,7 +187,7 @@ width:100%;
 }
 
 .tabs .tabs-button-selected {
-  z-index: 2;
+  /* z-index: ; */
   background-color: #5e9fb9;
   color: white;
 }
